# atlassian-cli

./: .env.example  .gitignore  BINARY_RENAME_SUMMARY.md  CLAUDE.md  Cargo.toml  README.en.md  README.md  deny.toml  install.sh  uninstall.sh
.claude/skills/jira-confluence/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
scripts/: install.sh  uninstall.sh
src/: auth.rs  client.rs  config.rs  filter.rs  http.rs  http_utils.rs  lib.rs  main.rs  query_utils.rs  response.rs  test_utils.rs  token.rs
src/auth/: CLAUDE.md  basic.rs  oauth.rs  service_account.rs  strategy.rs
src/auth/oauth/: callback.rs  flow.rs  store.rs  strategy.rs
src/confluence/: CLAUDE.md  api.rs  fields.rs  markdown.rs  mod.rs
src/jira/: CLAUDE.md  adf.rs  api.rs  fields.rs
src/markdown/: CLAUDE.md
src/markdown/confluence/: cleanup.rs  elements.rs  macros.rs  mod.rs
