[package]
name = "atlassian-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Atlassian CLI Team"]
description = "High-performance CLI for Atlassian Jira and Confluence"
license = "MIT"
repository = "https://github.com/junyeong-ai/atlassian-cli"
homepage = "https://github.com/junyeong-ai/atlassian-cli"
keywords = ["atlassian", "jira", "confluence", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "atlassian_cli"
path = "src/lib.rs"

[[bin]]
name = "atlassian-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
reqwest = { version = "0.13", features = ["form", "json", "query", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
toml = "1.1"
dirs = "6.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
htmd = "0.5"
regex = "1.12"

# OAuth 3LO stack
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
webbrowser = "1.2"
secrecy = { version = "0.10", features = ["serde"] }
tempfile = "3.27"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
